update
change the activity id to long type to support longer activity id